--- a/test.ipynb
+++ b/test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzgkqM4nzu5jBJYGU3LFm+",
+      "authorship_tag": "ABX9TyNLDXJyFIhiI7K0LTQgEQ66",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,10 +32,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pvP_EKIMq9sW",
-        "outputId": "49bc859d-470a-4c9a-aa57-952ba2945c9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "49bc859d-470a-4c9a-aa57-952ba2945c9b"
       },
       "source": [
         "from google.colab import drive\n",
@@ -66,11 +66,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F2nSwbulx9bz",
-        "outputId": "a047185e-5c7a-4ef9-d5f3-b9ec62b3835c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F2nSwbulx9bz",
+        "outputId": "a047185e-5c7a-4ef9-d5f3-b9ec62b3835c"
       },
       "source": [
         "!ls Test_data/"
@@ -128,19 +128,23 @@
         "id": "UmgxSs8P-fT7"
       },
       "source": [
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.callbacks import ( EarlyStopping, ModelCheckpoint,ReduceLROnPlateau)\n",
+        "import tensorflow.keras.layers as L\n",
+        "import tensorflow.keras.backend as K\n",
+        "import tensorflow as tf"
       ],
-      "execution_count": 47,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bW-gp5IazH-B",
-        "outputId": "1fa7abcc-f272-4def-ce03-2641f8cd4b93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bW-gp5IazH-B",
+        "outputId": "1fa7abcc-f272-4def-ce03-2641f8cd4b93"
       },
       "source": [
         "classess = os.listdir(\"Test_data/Train/\")\n",
@@ -163,11 +167,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fF_ea2wZzTDx",
-        "outputId": "70db875f-9715-4a35-8f7c-9b2c77714ca8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fF_ea2wZzTDx",
+        "outputId": "70db875f-9715-4a35-8f7c-9b2c77714ca8"
       },
       "source": [
         "for class_ in classess:\n",
@@ -192,11 +196,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KlSGEXge7QV5",
-        "outputId": "71d63abe-2219-4e08-b513-c3dcdcd08292",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KlSGEXge7QV5",
+        "outputId": "71d63abe-2219-4e08-b513-c3dcdcd08292"
       },
       "source": [
         "for class_ in classess:\n",
@@ -253,11 +257,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "59UuuhUa6aYP",
-        "outputId": "a52faddc-c420-4715-f177-9ae9829277e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "59UuuhUa6aYP",
+        "outputId": "a52faddc-c420-4715-f177-9ae9829277e3"
       },
       "source": [
         "train_images = np.array(train_images)\n",
@@ -283,11 +287,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xzbrzD6g6rfW",
-        "outputId": "21588ea9-eb10-4195-ddd3-175d30aa8404",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xzbrzD6g6rfW",
+        "outputId": "21588ea9-eb10-4195-ddd3-175d30aa8404"
       },
       "source": [
         "print(train_images.shape)\n",
@@ -312,12 +316,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WSmlw6p2682x",
-        "outputId": "d4fb7d15-508d-4f56-ac23-89c3a1561f32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 275
-        }
+        },
+        "id": "WSmlw6p2682x",
+        "outputId": "d4fb7d15-508d-4f56-ac23-89c3a1561f32"
       },
       "source": [
         "hist = plt.hist(train_images.flatten(),bins=100)"
@@ -353,12 +357,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3kYgROoo8JdJ",
-        "outputId": "88ca237a-1134-4bcb-9a10-d189201b172b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 275
-        }
+        },
+        "id": "3kYgROoo8JdJ",
+        "outputId": "88ca237a-1134-4bcb-9a10-d189201b172b"
       },
       "source": [
         "hist = plt.hist(train_images_normalised.flatten(),bins=100)"
@@ -401,10 +405,114 @@
         "id": "2BDr64hLAbcM"
       },
       "source": [
-        ""
+        "K.clear_session()"
+      ],
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0yHLGd1RCR81"
+      },
+      "source": [
+        "checkpoint = ModelCheckpoint(\"model_{epoch:02d}\",monitor='val_loss',verbose=1,save_best_only=True)\n",
+        "adaptiveLearningRate = ReduceLROnPlateau(monitor='loss',factor=0.1,patience=5,verbose=1,min_delta=0.0001)\n",
+        "earlyStopping = EarlyStopping(monitor='loss',mode='auto',verbose=1,patience=25)\n",
+        "callback_list = [checkpoint,adaptiveLearningRate,earlyStopping]"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E9-VMeQOEAc9"
+      },
+      "source": [
+        "class Model(tf.keras.Model):\n",
+        "  def __init__(self,number_of_calss):\n",
+        "    super(Model,self).__init__()\n",
+        "\n",
+        "    self.conv1=L.Conv2D(filters=32,kernel_size=(3,3),strides=(1,1))\n",
+        "    self.bn1 = L.BatchNormalization()\n",
+        "    self.act1=L.Activation('relu')\n",
+        "    self.pool1 = L.MaxPool2D(pool_size=(2,2))\n",
+        "    self.conv2=L.Conv2D(filters=32,kernel_size=(3,3),strides=(1,1))\n",
+        "    self.bn2 = L.BatchNormalization()\n",
+        "    self.act2=L.Activation('relu')\n",
+        "    self.pool2 = L.MaxPool2D(pool_size=(2,2))\n",
+        "\n",
+        "    self.dense = L.Dense(number_of_calss)\n",
+        "  def call(self,x,training=False):\n",
+        "    x=self.conv1(x)\n",
+        "    x=self.bn1(x)\n",
+        "    x=self.act1(x)\n",
+        "    x=self.pool1(x)\n",
+        "\n",
+        "    x=self.conv2(x)\n",
+        "    x=self.bn2(x)\n",
+        "    x=self.act2(x)\n",
+        "    x=self.pool2(x)"
+      ],
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mf3mL0o1IPmx"
+      },
+      "source": [
+        "model=Model(len(lb.classes_))"
+      ],
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fweFgEFOIv3n"
+      },
+      "source": [
+        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001),\n",
+        "              loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+        "              metrics=tf.keras.metrics.CategoricalAccuracy())"
+      ],
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XYk_rvTNIqDi",
+        "outputId": "35deb905-8120-4cb0-c31d-12ee5db6ad2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 316
+        }
+      },
+      "source": [
+        "model.build(input_shape=(96,96,1))"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-70-1fe5bdcd704d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m96\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m96\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mbuild\u001b[0;34m(self, input_shape)\u001b[0m\n\u001b[1;32m    411\u001b[0m                            'method accepts an `inputs` argument.')\n\u001b[1;32m    412\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 413\u001b[0;31m           \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    414\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mInvalidArgumentError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    415\u001b[0m           raise ValueError('You cannot build your model by calling `build` '\n",
+            "\u001b[0;32m<ipython-input-63-ed9642063666>\u001b[0m in \u001b[0;36mcall\u001b[0;34m(self, x, training)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdense\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_of_calss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtraining\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbn1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mact1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1018\u001b[0m         training=training_mode):\n\u001b[1;32m   1019\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1020\u001b[0;31m       \u001b[0minput_spec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_input_compatibility\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_spec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1021\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0meager\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1022\u001b[0m         \u001b[0mcall_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/engine/input_spec.py\u001b[0m in \u001b[0;36massert_input_compatibility\u001b[0;34m(input_spec, inputs, layer_name)\u001b[0m\n\u001b[1;32m    232\u001b[0m                          \u001b[0;34m', found ndim='\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m                          \u001b[0;34m'. Full shape received: '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 234\u001b[0;31m                          str(tuple(shape)))\n\u001b[0m\u001b[1;32m    235\u001b[0m     \u001b[0;31m# Check dtype.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    236\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mspec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Input 0 of layer conv2d_4 is incompatible with the layer: : expected min_ndim=4, found ndim=3. Full shape received: (96, 96, 1)"
+          ]
+        }
+      ]
     }
   ]
 }
