--- a/Test_report2.ipynb
+++ b/Test_report2.ipynb
@@ -39,26 +39,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pvP_EKIMq9sW",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c9c8bfd9-8427-49c1-f3a9-0dec167d0f70"
+        "id": "pvP_EKIMq9sW"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -66,7 +54,7 @@
         "id": "gP4MSvghxzxK"
       },
       "source": [
-        "# !unzip /content/drive/MyDrive/Test_data.zip"
+        "!unzip /content/drive/MyDrive/Test_data.zip"
       ],
       "execution_count": 2,
       "outputs": []
@@ -97,25 +85,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P1WNJa916GEJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bf82306b-e33e-4017-de30-ac1d38bbf73d"
+        "id": "P1WNJa916GEJ"
       },
       "source": [
         "!mv Test_data/Sample_Submission.csv Sample_Submission.csv"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mv: cannot stat 'Test_data/Sample_Submission.csv': No such file or directory\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
